2008-05-18  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gstevent.c:
	  Document that gst_event_new_tag() and gst_event_new_navigation()
	  take ownership of the taglist/structure passed to them. (#533635).

2008-05-17  Jan Schmidt  <jan.schmidt@sun.com>

	* docs/Makefile.am:
	Don't descend into the plugins dir if plugin docs building
	is disabled.

	* docs/README:
	Add a note about the new type:GTypeName syntax for the plugin
	documentation .types file.

2008-05-17  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstmessage.c: (gst_message_new_error),
	(gst_message_new_warning), (gst_message_new_info):
	* gst/gstmessage.h:
	Mark the debug string parameters as const. Fixes bug #533490.

2008-05-16  Sebastian Dröge  <slomo@circular-chaos.org>

	* libs/gst/base/gsttypefindhelper.c: (helper_find_peek):
	Sort buffer cache list by end offsets. This makes sure that we don't
	stop to search for a cached buffer that contains the requested data
	too early.
	Also read a minimum of 4k bytes instead of 512 bytes as this is a bit
	more efficient. Fixes bug #459862.

2008-05-14  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstinfo.c:
	  Explain why we copy the list.

	* gst/gstpipeline.c:
	  Improve docs.

	* gst/gstutils.c:
	  Add one debug-log statement to help tracing probelms with linking pads.

2008-05-12  Stefan Kost  <ensonic@users.sf.net>

	* tests/check/gst/gstinfo.c:
	Add a test for removing the default log handler. Seems to fail under
	windows.

2008-05-14  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstpad.c: (gst_pad_peer_accept_caps):
	Release pad lock before calling out to avoid a possible deadlock.

2008-05-14  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/parse/grammar.y:
	Remove unneeded value unset.

	* tests/check/gst/gstvalue.c: (GST_START_TEST), (gst_value_suite):
	Add unit test for de/serialization of caps.

2008-05-13  Sebastian Dröge  <slomo@circular-chaos.org>

	* plugins/elements/gstfakesink.c: